my first ai workflow

--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -96,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "# If this returns false, see the next cell!\n",
@@ -141,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the key - if you're not using OpenAI, check whichever key you're using! Ollama doesn't need a key.\n",
     "\n",
@@ -159,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,9 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 equals 4.\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
@@ -215,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,9 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A bat and a ball cost $1.10 in total. The bat costs $1.00 more than the ball. How much does the ball cost?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
@@ -245,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,9 +290,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's denote:\n",
+      "\n",
+      "- \\( x \\) = cost of the ball (in dollars)\n",
+      "- \\( x + 1.00 \\) = cost of the bat (since the bat costs $1.00 more than the ball)\n",
+      "\n",
+      "According to the problem:\n",
+      "\n",
+      "\\[\n",
+      "x + (x + 1.00) = 1.10\n",
+      "\\]\n",
+      "\n",
+      "Simplify:\n",
+      "\n",
+      "\\[\n",
+      "2x + 1.00 = 1.10\n",
+      "\\]\n",
+      "\n",
+      "Subtract 1.00 from both sides:\n",
+      "\n",
+      "\\[\n",
+      "2x = 0.10\n",
+      "\\]\n",
+      "\n",
+      "Divide both sides by 2:\n",
+      "\n",
+      "\\[\n",
+      "x = 0.05\n",
+      "\\]\n",
+      "\n",
+      "**Answer:** The ball costs \\(\\boxed{5 \\text{ cents}}\\) or \\$0.05.\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
@@ -272,9 +344,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's denote:\n",
+       "\n",
+       "- \\( x \\) = cost of the ball (in dollars)\n",
+       "- \\( x + 1.00 \\) = cost of the bat (since the bat costs $1.00 more than the ball)\n",
+       "\n",
+       "According to the problem:\n",
+       "\n",
+       "\\[\n",
+       "x + (x + 1.00) = 1.10\n",
+       "\\]\n",
+       "\n",
+       "Simplify:\n",
+       "\n",
+       "\\[\n",
+       "2x + 1.00 = 1.10\n",
+       "\\]\n",
+       "\n",
+       "Subtract 1.00 from both sides:\n",
+       "\n",
+       "\\[\n",
+       "2x = 0.10\n",
+       "\\]\n",
+       "\n",
+       "Divide both sides by 2:\n",
+       "\n",
+       "\\[\n",
+       "x = 0.05\n",
+       "\\]\n",
+       "\n",
+       "**Answer:** The ball costs \\(\\boxed{5 \\text{ cents}}\\) or \\$0.05."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -317,23 +431,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le film choisi:\n",
+      "Une scène emblématique du cinéma indépendant américain des années 90 est celle de \"Pulp Fiction\" de Quentin Tarantino, sortie en 1994. La scène où Vincent Vega (interprété par John Travolta) et Mia Wallace (interprétée par Uma Thurman) dansent ensemble auJack Rabbit Slim's, un restaurant rétro, est particulièrement mémorable. \n",
+      "\n",
+      "Leur danse pleine d'énergie et de style, accompagnée de la chanson \"You Never Can Tell\" de Chuck Berry, capture l'essence de la culture pop des années 90, tout en soulignant les thèmes de l’amour, de la chance et du risque qui traversent le film. Ce moment est emblématique non seulement pour son chorégraphie et son esthétique, mais aussi pour la façon dont il symbolise la relation complexe entre les personnages. En plus, c'est une scène qui a eu un impact durable sur la culture cinématographique et a inspiré de nombreux hommages et références dans les films qui ont suivi.\n",
+      "\n",
+      "Éléments clés de la scène et de l'intrigue:\n",
+      "La scène de danse entre Vincent Vega et Mia Wallace dans \"Pulp Fiction\" est l'une des séquences les plus emblématiques du film et de l'ensemble du cinéma des années 90. Voici les éléments clés de cette scène et son importance dans l'intrigue :\n",
+      "\n",
+      "### Éléments clés de la scène :\n",
+      "\n",
+      "1. **Lieu et ambiance** : La scène se déroule au Jack Rabbit Slim's, un restaurant au style rétro qui recrée l'atmosphère des années 50. L'environnement, avec ses décorations kitsch et sa musique vintage, crée un contraste frappant avec la criminalité et la tension souvent présentes dans l'histoire globale du film.\n",
+      "\n",
+      "2. **Musique** : La chanson \"You Never Can Tell\" de Chuck Berry accompagne leur danse. Cette mélodie évoque une époque plus insouciante et romantique, renforçant l'atmosphère nostalgique et légère de la scène.\n",
+      "\n",
+      "3. **Chorégraphie** : La danse elle-même combine des mouvements classiques et instinctifs, montrant non seulement la chimie entre Vincent et Mia, mais aussi l'aisance avec laquelle ils naviguent dans leur alchimie. Leur danse fait écho à des duos iconiques de l'époque, tout en étant originale et innovante.\n",
+      "\n",
+      "4. **Tenues vestimentaires** : Vincent, vêtu d'un costume noir, et Mia, habillée d'une robe noire élégante, accentuent leur personnalité et leur attrait. Leurs choix de vêtements soulignent également le style cinématographique distinctif de Tarantino, qui mélange influences anciennes et modernes.\n",
+      "\n",
+      "5. **Expressions et interactions** : Les regards échangés, les rires et les sourires témoignent de la connexion entre les deux personnages. Malgré la tension sous-jacente de leur situation (Mia étant l'épouse du patron de Vincent), cette scène met en avant un moment de joie et de flirt, créant une bulle d'innocence dans un monde autrement dangereux.\n",
+      "\n",
+      "### Place dans l'intrigue :\n",
+      "\n",
+      "Dans le contexte de l'intrigue de \"Pulp Fiction\", cette scène est significative pour plusieurs raisons :\n",
+      "\n",
+      "- **Développement des personnages** : Elle permet de mieux comprendre la dynamique entre Vincent et Mia. Leur danse révèle un moment de complicité et d'attraction mutuelle, ce qui renforce les enjeux émotionnels et dramatiques de leur histoire.\n",
+      "\n",
+      "- **Symbolisme de l'amour et du risque** : La danse représente l'amour et la chance, deux thèmes centraux du film. Leur moment de plaisir est éphémère et accentue la fragilité de leur situation, étant donné les dangers entourant leur mode de vie. Cela souligne l'ironie tragique de leurs choix.\n",
+      "\n",
+      "- **Impact culturel** : Au-delà du film, cette scène a eu un impact durable sur le cinéma et la culture pop. Elle a inspiré de nombreuses références dans d'autres œuvres, créant un archetype pour les scènes de danse dans les films ultérieurs.\n",
+      "\n",
+      "En somme, la scène de danse au Jack Rabbit Slim's est à la fois un moment de légèreté et de tension, encapsulant les thèmes principaux du film, tout en restant ancrée dans l'imaginaire collectif du cinéma.\n",
+      "\n",
+      "Proposition de poème:\n",
+      "Dans le Jack Rabbit Slim's, deux âmes se rencontrent,  \n",
+      "Sur un parquet usé, où le temps s'étend,  \n",
+      "Vincent et Mia, danseurs audacieux,  \n",
+      "Dans les rythmes du passé, ils tracent des cieux.  \n",
+      "\n",
+      "En écho à Chuck Berry, leurs corps s’illuminent,  \n",
+      "La mélodie suave, leur complicité s’augmente,  \n",
+      "Des mouvements élégants, une alchimie fine,  \n",
+      "Dans un monde de péché, un instant se dresse, éclatante.  \n",
+      "\n",
+      "Costumes noirs en harmonie, glamour du soir,  \n",
+      "Ils flottent sous les néons, comme un rêve illusoire,  \n",
+      "Un regard échangé, une étincelle vive,  \n",
+      "Dans cette bulle fragile, l’amour s’achève et dérive.  \n",
+      "\n",
+      "Les rires s’entrelacent, la tension se dissipe,  \n",
+      "Un souffle d'innocence, un jeu de séduction,  \n",
+      "Pour un instant volé, loin des ombres et des tristes,  \n",
+      "Ils se laissent emporter par la douce vibration.  \n",
+      "\n",
+      "Mais au cœur de cette danse, le risque s’invite,  \n",
+      "La vie qui se dérobe, la menace maléfique,  \n",
+      "Un amour éphémère, un bal de contradictions,  \n",
+      "Un moment de saveur, un frisson des passions.  \n",
+      "\n",
+      "Iconique séquence, tableau du 7e art,  \n",
+      "Elle perdure en mémoire, dans le cœur des vivants,  \n",
+      "Un hommage à la chance, une ode au départ,  \n",
+      "Dans les pas de Vincent et Mia, la vie fait son vent.  \n",
+      "\n",
+      "Leur danse, un reflet des rêves inachevés,  \n",
+      "Dans un cinéma vibrant, d’éclats enivrants,  \n",
+      "Pulp Fiction, écho, souvenir des années,  \n",
+      "D'un monde en couleur, où l’amour file lentement.  \n"
+     ]
+    }
+   ],
    "source": [
-    "# First create the messages:\n",
+    "# === ÉTAPE 1: Recherche de film ===\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Choisis une scène mythique du cinéma indépendant américain des années 90.\"}]\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
     "\n",
-    "# Then make the first call:\n",
+    "movie_choice = response.choices[0].message.content\n",
+    "print(\"Le film choisi:\")\n",
+    "print(movie_choice)\n",
     "\n",
-    "response =\n",
+    "# === ÉTAPE 2: Description de la scène ===\n",
+    "messages = [{\"role\": \"user\", \"content\": f\"Basé sur ce film: {movie_choice}, décris les éléments clés de la scène et sa place dans l'intrigue.\"}]\n",
     "\n",
-    "# Then read the business idea:\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4o-mini\", \n",
+    "    messages=messages\n",
+    ")\n",
     "\n",
-    "business_idea = response.\n",
+    "key_scene_and_plot_elements = response.choices[0].message.content\n",
+    "print(\"\\nÉléments clés de la scène et de l'intrigue:\")\n",
+    "print(key_scene_and_plot_elements)\n",
     "\n",
-    "# And repeat! In the next message, include the business idea within the message"
+    "# === ÉTAPE 3: Rédaction d'un poème à partir des éléments clés ===\n",
+    "messages = [{\"role\": \"user\", \"content\": f\"Film: {movie_choice}\\nÉléments clés: {key_scene_and_plot_elements}\\n\\nRédige un poème inspiré de ces éléments.\"}]\n",
+    "\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "\n",
+    "ai_solution = response.choices[0].message.content\n",
+    "print(\"\\nProposition de poème:\")\n",
+    "print(ai_solution)"
    ]
   },
   {
@@ -344,7 +554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents",
    "language": "python",
    "name": "python3"
   },
@@ -358,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
