feat: migrate Deep Research lab from SendGrid to Resend
- Replace SendGrid email service with Resend API
- Update email function to use simplified Resend syntax
- Configure personal email settings (actarus@djeeb.fr -> jibe75093@gmail.com)
- Maintain WebSearchTool functionality for research pipeline

--- a/2_openai/4_lab4.ipynb
+++ b/2_openai/4_lab4.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,18 +45,28 @@
     "from pydantic import BaseModel, Field\n",
     "from dotenv import load_dotenv\n",
     "import asyncio\n",
-    "import sendgrid\n",
+    "import resend\n",
     "import os\n",
-    "from sendgrid.helpers.mail import Mail, Email, To, Content\n",
     "from typing import Dict\n",
     "from IPython.display import display, Markdown"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(override=True)"
    ]
@@ -75,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +113,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "In 2025, several AI agent frameworks have emerged, each offering unique features to enhance the development of intelligent, autonomous systems.\n",
+       "\n",
+       "**AutoGen**: An open-source framework by Microsoft, AutoGen facilitates the orchestration of multiple AI agents, supporting both autonomous and semi-autonomous workflows. It enables dynamic collaboration among agents, allowing human intervention when necessary. AutoGen is particularly effective in tasks requiring collaborative problem-solving, such as code generation. ([medium.com](https://medium.com/bridgged-generative-ai-strategy-hub/the-top-5-ai-agent-frameworks-to-watch-in-2025-bridgged-a9092f095d32?utm_source=openai))\n",
+       "\n",
+       "**CrewAI**: This lightweight Python framework emphasizes role-based agent design, enabling the creation of agents with distinct roles and capabilities. CrewAI is ideal for workflows that benefit from structured teamwork, such as marketing strategy automation and project management. It allows agents to collaborate effectively, sharing insights and coordinating tasks to achieve common objectives. ([medium.com](https://medium.com/bridgged-generative-ai-strategy-hub/the-top-5-ai-agent-frameworks-to-watch-in-2025-bridgged-a9092f095d32?utm_source=openai))\n",
+       "\n",
+       "**LangGraph**: An open-source framework for AI agents, LangGraph is designed for building multi-step, stateful applications like agents and chatbots. It integrates with LangChain tools, memory, and agents within a graph-based structure, supporting dynamic decision-making and control flow across nodes. LangGraph is suitable for complex workflows requiring persistence and error recovery. ([antiersolutions.com](https://www.antiersolutions.com/blogs/top-ai-agent-frameworks-to-watch-in-2025-a-complete-guide/?utm_source=openai))\n",
+       "\n",
+       "**LlamaIndex**: This open-source data orchestration framework is ideal for developing generative AI and AI agent solutions. LlamaIndex features ready-to-use agents and tools, along with workflows that enable the development of multi-agent systems. It streamlines context augmentation for generative AI use cases by utilizing a Retrieval-Augmented Generation (RAG) pipeline, integrating multiple tools and functionalities to simplify the development process. ([antiersolutions.com](https://www.antiersolutions.com/blogs/top-ai-agent-frameworks-to-watch-in-2025-a-complete-guide/?utm_source=openai))\n",
+       "\n",
+       "**Eliza**: A Web3-friendly AI agent operating system, Eliza integrates seamlessly with web3 applications, allowing AI agents to interact with blockchain data and smart contracts. It provides a regular TypeScript program under full user control, facilitating the deployment of web3 applications. ([arxiv.org](https://arxiv.org/abs/2501.06781?utm_source=openai))\n",
+       "\n",
+       "**AutoAgent**: A fully automated, zero-code framework for large language model (LLM) agents, AutoAgent enables users to create and deploy LLM agents through natural language alone. It operates as an autonomous agent operating system, comprising components like Agentic System Utilities, LLM-powered Actionable Engine, Self-Managing File System, and Self-Play Agent Customization module. AutoAgent serves as a versatile multi-agent system for general AI assistants. ([arxiv.org](https://arxiv.org/abs/2502.05957?utm_source=openai))\n",
+       "\n",
+       "These frameworks represent the forefront of AI agent development in 2025, each contributing to the advancement of intelligent, autonomous systems across various applications. "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "message = \"Latest AI Agent frameworks in 2025\"\n",
     "\n",
@@ -126,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "searches=[WebSearchItem(reason='To find the most recent and relevant AI agent frameworks that have emerged or gained popularity in 2025.', query='latest AI agent frameworks 2025'), WebSearchItem(reason='To explore industry trends, innovations, and expert opinions on AI agents in 2025.', query='AI agent frameworks trends 2025'), WebSearchItem(reason='To gather information from developers and tech companies regarding the latest tools and libraries for building AI agents.', query='best AI agent development tools 2025')]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "message = \"Latest AI Agent frameworks in 2025\"\n",
@@ -174,34 +226,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "@function_tool\n",
     "def send_email(subject: str, html_body: str) -> Dict[str, str]:\n",
     "    \"\"\" Send out an email with the given subject and HTML body \"\"\"\n",
-    "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\") # Change this to your verified email\n",
-    "    to_email = To(\"ed.donner@gmail.com\") # Change this to your email\n",
-    "    content = Content(\"text/html\", html_body)\n",
-    "    mail = Mail(from_email, to_email, subject, content).get()\n",
-    "    response = sg.client.mail.send.post(request_body=mail)\n",
-    "    return {\"status\": \"success\"}"
+    "    resend.api_key = os.environ.get('RESEND_API_KEY')\n",
+    "    \n",
+    "    params = {\n",
+    "        \"from\": \"actarus@djeeb.fr\",  # Change to your verified sender domain\n",
+    "        \"to\": [\"jibe75093@gmail.com\"],  # Change to your recipient\n",
+    "        \"subject\": subject,\n",
+    "        \"html\": html_body\n",
+    "    }\n",
+    "    \n",
+    "    response = resend.Emails.send(params)\n",
+    "    return {\"status\": \"success\", \"id\": response.get(\"id\")}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Fonction send_email configurée avec Resend\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "FunctionTool(name='send_email', description='Send out an email with the given subject and HTML body', params_json_schema={'properties': {'subject': {'title': 'Subject', 'type': 'string'}, 'html_body': {'title': 'Html Body', 'type': 'string'}}, 'required': ['subject', 'html_body'], 'title': 'send_email_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x10d848c20>, strict_json_schema=True, is_enabled=True)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Test de la fonction send_email\n",
+    "print(\"✅ Fonction send_email configurée avec Resend\")\n",
     "send_email"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,9 +399,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting research...\n",
+      "Planning searches...\n",
+      "Will perform 3 searches\n",
+      "Searching...\n",
+      "Finished searching\n",
+      "Thinking about report...\n",
+      "Finished writing report\n",
+      "Writing email...\n",
+      "Email sent\n",
+      "Hooray!\n"
+     ]
+    }
+   ],
    "source": [
     "query =\"Latest AI Agent frameworks in 2025\"\n",
     "\n",
@@ -369,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents",
    "language": "python",
    "name": "python3"
   },
@@ -383,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
